# BenchBox

./: .codespell-ignore.txt  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT.md  DISCLAIMER.md  MANIFEST.in  Makefile  README.md  _benchbox_pytest_xdist_safety.py  pyproject.toml  pytest-ci.ini  pytest.ini
.claude/: README.md
.claude/commands/: README.md  blog-cleanup.md  blog-critique.md  blog-draft.md  blog-plan.md  blog-research.md  code-commit.md  code-compare.md  code-fix.md  code-perf.md  code-review.md  code-shrink.md  code-to-spec.md  docs-adversarial.md  docs-build.md  docs-compare.md  docs-create.md  docs-review.md  docs-shrink.md  test-cleanup.md  test-coverage.md  test-create.md  test-fix.md  test-perf.md  test-run.md  todo-cleanup.md  todo-complete.md  todo-create.md  todo-from-spec.md  todo-implement.md  todo-prioritize.md  todo-review.md
.claude/skills/: README.md  architecture-review.md  benchmark-plan-and-execute.md  benchmark-test.md  binary-wrapper-check.md  compare-implementations.md  dialect-translation-test.md  live-platform-test.md  project-todo-sync.md  quick-quality-check.md  tpc-compliance-check.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  platform_support.yml
.github/workflows/: docs.yml  lint.yml  python-publish.yml  release.yml  test.yml  tpch-c-compatible-tests.yml
_sources/: README.md
_sources/tpc-ds/: PATCHES.md  stdout-support.patch
_sources/tpc-h/: PATCHES.md  stdout-support.patch
benchbox/: __init__.py  base.py  joinorder.py  metadata_primitives.py  read_primitives.py  tpcdi.py  tpch_skew.py  tpchavoc.py  transaction_primitives.py  write_primitives.py
benchbox/cli/: __init__.py  benchmarks.py  cloud_storage.py  composite_params.py  config.py  database.py  display.py  dryrun.py  exceptions.py  execution_pipeline.py  help.py  orchestrator.py  output.py  platform.py  platform_defaults.py  platform_hooks.py  preferences.py  system.py  tuning.py  tuning_resolver.py  verbose_logging.py
benchbox/core/: base_benchmark.py  benchmark_loader.py  benchmark_mixins.py  benchmark_registry.py  config.py  config_utils.py  connection.py  dryrun.py  exceptions.py  pg_extension_comparison.py  platform_config.py  platform_registry.py  query_catalog_base.py  query_manager.py  runtime_paths.py  schemas.py  simple_benchmark_mixin.py  sql_utils.py  system.py  tpc_compliance.py  tpc_metrics.py  tpc_patterns.py  tpc_validation.py  upload_validation.py
benchbox/examples/: dryrun_utils.py
benchbox/mcp/: __init__.py  __main__.py  cli.py  errors.py  execution.py  observability.py  schemas.py  server.py
benchbox/monitoring/: __init__.py  bottleneck.py  performance.py  profiler.py  report.py
benchbox/release/: __init__.py  content_validation.py  sync.py  workflow.py
benchbox/utils/: VERSION_MANAGEMENT.md  clock.py  cloud_storage.py  compression.py  compression_mixin.py  data_validation.py  database_naming.py  datagen_manifest.py  dependencies.py  dependency_validation.py  dialect_utils.py  execution_manager.py  file_format.py  format_selection.py  input_validation.py  path_utils.py  printing.py  resource_limits.py  runtime_env.py  stale_artifact_pruning.py  timeout_manager.py  tpc_compilation.py  version.py
docs/: CLI_REFERENCE.md  CNAME  README.md  api.rst  conf.py  index.rst  linkcheck_ignore.txt  platform-config-audit.md  style.css
docs/_extensions/: sphinx_tags_fix.py
docs/_static/: collapsible-nav.js  custom.css  pygments_cobalt2.py
docs/_templates/: page.html
docs/advanced/: ci-cd-integration.md  custom-benchmarks.md  customization.rst  format-conversion.md  index.md  optimizer-tests.md  performance-optimization.md  performance-tuning.rst  performance.md  power-run-concurrent-queries.md
docs/benchmarks/: academic-benchmarks.rst  ai-primitives.md  amplab.md  benchbox-experimental.rst  benchbox-primitives.rst  clickbench.md  coffeeshop.md  datavault.md  future-benchmarks.md  h2odb.md  index.md  industry-benchmarks.rst  join-order.md  metadata-primitives.md  nyctaxi.md  read-primitives.md  ssb.md  tpc-di.md  tpc-ds-obt.md  tpc-ds.md  tpc-h.md  tpc-havoc.md  tpc-standards.rst  tpch-skew.md  transaction-primitives.md  tsbs-devops.md  write-primitives.md
docs/blog/: 2025-01-22-welcome.md  2026-01-22-welcome.md  2026-02-15-v0-1-2-release-summary.md  2026-02-15-why-we-deleted-plotly.md  2026-02-23-v0-1-3-release-summary.md  2026-03-03-duckdb-tpch-extension-vs-benchbox.md  2026-03-03-v0-1-4-release-summary.md  2026-03-10-extracting-textcharts.md  2026-03-10-v0-1-5-release-summary.md  index.rst
docs/concepts/: architecture.md  benchmarking-tools-compared.md  data-model.md  glossary.md  index.md  workflow.md
docs/design/: architecture.md  index.md  structure.md
docs/development/: data-sharing.md  (+19 more)
examples/: CONTRIBUTING.md  INDEX.md  MAPPING.md  PATTERNS.md  README.md  duckdb_coffeeshop.py  tpch_skew_demo.py  unified_runner.py  unified_runner_README.md
landing/: index.html  script.js  style.css
scripts/: analyze_test_timings.py  automate_release.py  aws_cost_limits.py  benchmark_mooncake_migration.py  build_release.py  capture_chart_images.py  check_complexity.py  check_duplicate_code.py  check_example_syntax.py  check_module_coverage.py  check_per_file_coverage.py  cleanup_workflows.py  compare_pg_duckdb.py  create_worktree.sh  delete_old_runs.sh  finalize_release.py  generate_doc_images.py  local_stress_test.sh  prepare_release.py  probe_mooncake_types.py  run_pyspark_tests.sh  sync_repos.py  update_version.py  validate_example_references.py  validate_todo_indexes.py  validate_visualization_images.py  verify_release.py  with_supported_java.sh
tests/: README.md  __init__.py  conftest.py  run_coverage.py  run_tpcds_tests.py  run_tpch_tests.py  test_amplab.py  test_base.py  test_benchbox.py  test_benchmark_validator.py  test_clickbench.py  test_error_handling_consistency.py  test_h2odb.py  test_root_tpcds_streams.py  test_ssb.py  test_tpcdi.py  test_tpcds_direct.py  test_tpch_official.py  test_unified_runner.py
(+1262 files in other folders)
